AC_INIT(Mvm, 0.0.1, xiphux@gmail.com)
AC_CONFIG_AUX_DIR(config)
AM_CONFIG_HEADER([config.h])
AM_INIT_AUTOMAKE(Mvm, 0.0.1)
AM_MAINTAINER_MODE
MYCFLAGS="-pipe -fPIC"
AC_ARG_ENABLE(debug, [  --enable-debug turns -g on and -O2 off], MYCFLAGS="$MYCFLAGS -ggdb3 -Wall -pedantic", MYCFLAGS="$MYCFLAGS -O1")
CFLAGS="$CFLAGS $MYCFLAGS"
CXXFLAGS="$CXXFLAGS $MYCFLAGS"
AC_PROG_CXX
AC_HEADER_STDBOOL
AC_C_CONST
AC_C_INLINE
AC_PROG_RANLIB
#AC_PROG_INSTALL
AC_CONFIG_FILES([Makefile src/Makefile src/basic/Makefile src/core/Makefile src/parser/Makefile src/util/Makefile])
AC_OUTPUT
