AC_INIT(Mvm, 0.0.1, xiphux@gmail.com)
AC_CONFIG_AUX_DIR(config)
AM_CONFIG_HEADER([config.h])
AM_INIT_AUTOMAKE(Mvm, 0.0.1)
AM_MAINTAINER_MODE
MYCFLAGS="-pipe -fPIC"
LDFLAGS=""
AC_ARG_ENABLE(debug, [  --enable-debug	turns debug symbols on and optimization off], MYCFLAGS="$MYCFLAGS -ggdb3 -Wall -pedantic", MYCFLAGS="$MYCFLAGS -O1")
AC_ARG_ENABLE(gui, [  --enable-gui	enables ncurses gui], USENCURSES=1)
CFLAGS="$CFLAGS $MYCFLAGS"
CXXFLAGS="$CXXFLAGS $MYCFLAGS -fvisibility-inlines-hidden"
LDFLAGS="$LDFLAGS $MYLDFLAGS"
AC_PROG_CXX
#AC_PROG_RANLIB
AC_HEADER_STDBOOL
AC_C_CONST
AC_C_INLINE
#AC_PROG_INSTALL
NCURSESOBJS=""
NCURSESSUBDIR=""
if test "$USENCURSES" = 1 ; then
	AC_CHECK_LIB(ncurses,main,INCLUDENCURSES=1)
	AC_CHECK_LIB(curses,main,INCLUDECURSES=1)
	AC_CHECK_HEADERS(curses.h,HAVE_CURSES_H=1)
	AC_CHECK_HEADERS(ncurses/ncurses.h ncurses/curses.h ncurses.h)
	if test "$INCLUDENCURSES" = 1; then
		NCURSES_LIBS="-lncurses"
	elif test "$INCLUDECURSES" = 1; then
		NCURSES_LIBS="-lcurses"
	else
		echo 'You need the ncurses or curses libraries!'
		USENCURSES=0
	fi
fi
if test "$USENCURSES" = 1 ; then
	AC_SUBST(NCURSES_LIBS)
	AC_DEFINE([NCURSES_GUI],[],[Use NCurses GUI])
fi
AM_CONDITIONAL(NCURSES_DATAPATH, test x$USENCURSES = x1)
AC_CONFIG_FILES([Makefile src/Makefile])
AC_OUTPUT
